@@ -1,7 +1,6 @@
 package io.kestra.core.topologies;
 
 import io.kestra.core.models.conditions.Condition;
-import io.kestra.core.models.conditions.types.*;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.hierarchies.Graph;
@@ -13,9 +12,9 @@ import io.kestra.core.models.topologies.FlowTopologyGraph;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.repositories.FlowRepositoryInterface;
 import io.kestra.core.repositories.FlowTopologyRepositoryInterface;
-import io.kestra.core.runners.RunnerUtils;
 import io.kestra.core.services.ConditionService;
 import io.kestra.core.utils.ListUtils;
+import io.kestra.plugin.core.condition.*;
 import io.micronaut.core.annotation.Nullable;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
@@ -36,14 +35,10 @@ public class FlowTopologyService {
     protected ConditionService conditionService;
 
     @Inject
-    protected RunnerUtils runnerUtils;
-
-    @Inject
     private FlowRepositoryInterface flowRepository;
 
     @Inject
     private FlowTopologyRepositoryInterface flowTopologyRepository;
-
 
     public FlowTopologyGraph graph(Stream<FlowTopology> flows, Function<FlowNode, FlowNode> anonymize) {
         Graph<FlowNode, FlowRelation> graph = new Graph<>();
@@ -177,16 +172,16 @@ public class FlowTopologyService {
         List<AbstractTrigger> triggers = ListUtils.emptyOnNull(child.getTriggers());
 
         // simulated execution
-        Execution execution = runnerUtils.newExecution(parent, (f, e) -> null, null);
+        Execution execution = Execution.newExecution(parent, (f, e) -> null, null);
 
         // keep only flow trigger
-        List<io.kestra.core.models.triggers.types.Flow> flowTriggers = triggers
+        List<io.kestra.plugin.core.trigger.Flow> flowTriggers = triggers
             .stream()
-            .filter(t -> t instanceof io.kestra.core.models.triggers.types.Flow)
-            .map(t -> (io.kestra.core.models.triggers.types.Flow) t)
-            .collect(Collectors.toList());
+            .filter(t -> t instanceof io.kestra.plugin.core.trigger.Flow)
+            .map(t -> (io.kestra.plugin.core.trigger.Flow) t)
+            .toList();
 
-        if (flowTriggers.size() == 0) {
+        if (flowTriggers.isEmpty()) {
             return false;
         }
 
@@ -207,7 +202,7 @@ public class FlowTopologyService {
                 .values()
                 .stream()
                 .filter(c -> !isFilterCondition(c))
-                .collect(Collectors.toList());
+                .toList();
 
 
             return (multipleConditions
@@ -228,7 +223,7 @@ public class FlowTopologyService {
     protected boolean isMandatoryMultipleCondition(Condition condition) {
         return Stream
             .of(
-                VariableCondition.class
+                ExpressionCondition.class
             )
             .anyMatch(aClass -> condition.getClass().isAssignableFrom(aClass));
     }
